--- a/annuncio.html
+++ b/annuncio.html
@@ -224,7 +224,7 @@
 						<div class="modal-dialog edit-annuncio" role="document">
 							<div class="modal-content">
 								<div class="modal-header arancio">
-									<h5 class="modal-title" id="exampleModalLabel">Nuovo annuncio</h5>
+									<h5 class="modal-title" id="exampleModalLabel">Modifica annuncio</h5>
 								</div>
 								<div class="modal-body">
 									<div class="container rounded bg-white mt-5">
