--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="operazioni.html">
+                <a class="nav-link" href="profile.html">
                     <img src="img/user-solid.svg" class="nav-icon" alt="Profilo">
                     <p class="nav-icon-text nav-link">Profilo</p>
                 </a>
