modal nuovo annuncio sistemato

--- a/index.html
+++ b/index.html
@@ -286,10 +286,10 @@
                                             </label>
                                         </div>
                                         <div class="col-md-6">
-                                            <label id="labelTempoUsura" class="tempoUsura">
+                                            <label id="labelTempoUsura" class="display-none">
                                                 <input id="tempoUsura" type="text" class="form-control form-custom" placeholder="Tempo usura in mesi" value="">
                                             </label>
-                                            <label id="labelScadenzaGaranzia" class="garanzia">
+                                            <label id="labelScadenzaGaranzia" class="display-none">
                                                 <input id="scadenzaGaranzia" type="text" class="form-control form-custom" placeholder="Scadenza garanzia" onfocus="(this.type='date')">
                                             </label>
                                         </div>
