ho messo i tuoi doctype

--- a/annuncio_eliminato.html
+++ b/annuncio_eliminato.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="it">
 
 <head>
@@ -275,7 +276,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/navbar.js"></script>
-    <script src="js/bottoni.js"></script>
 </body>
 
 </html>
