--- a/profilo_eliminato.html
+++ b/profilo_eliminato.html
@@ -209,7 +209,7 @@
 
 <div class="container drop-shadow mt-5 mb-5 text-center pt-2">
     <h1>Il tuo profilo è stato eliminato :(</h1>
-    <img src="img/sad_bee.png" class="h-75 mb-3 img-fluid" alt="">
+    <img src="img/sad_bee.png" class="altezza-fissa mb-3 img-fluid" alt="">
 </div>
 
 
