--- a/richiestaDiAcquisto.html
+++ b/richiestaDiAcquisto.html
@@ -209,7 +209,7 @@
 
 <div class="container drop-shadow mt-5 mb-5 text-center pt-2">
     <h1>Abbiamo inviato la tua richiesta d'acquisto!</h1>
-    <img src="img/bee_thumbs_up.png" class="h-75 mb-3 img-fluid" alt="">
+    <img src="img/bee_thumbs_up.png" class="altezza-fissa mb-3 img-fluid" alt="">
 </div>
 
 
