--- a/annuncio_eliminato.html
+++ b/annuncio_eliminato.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="it">
 
 <head>
@@ -209,7 +210,7 @@
 
     <div class="container drop-shadow mt-5 mb-5 text-center pt-2">
         <h1>Il tuo annuncio è stato eliminato!</h1>
-        <img src="img/bee_thumbs_up.png" class="h-75 mb-3 img-fluid" alt="">
+        <img src="img/bee_thumbs_up.png" class="mb-3 img-fluid altezza-fissa" alt="">
     </div>
 
 
