--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                                             </div>
                                             <div class="md-form md-outline">
                                                 <i class="fas fa-lock prefix"></i>
-                                                <input type="password" id="formLoginRegiser-password" class="form-control" placeholder="Password" required>
-                                                <label data-error="wrong" data-success="right" for="formLoginRegiser-password"></label>
+                                                <input type="password" id="formLoginRegister-password" class="form-control" placeholder="Password" required>
+                                                <label data-error="wrong" data-success="right" for="formLoginRegister-password"></label>
                                             </div>
 
                                             <div class="text-center mt-4 pt-3">
@@ -360,7 +360,6 @@
                         <button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
                         <!-- <a href="annuncio.html" class="btn btn-primary btn-outline-success">Pubblica</a> -->
                         <button class="btn btn-primary btn-outline-success" type="submit">Pubblica</button>
-
                     </div>
                 </form>
             </div>
@@ -821,7 +820,7 @@
 <script src="js/navbar.js"></script>
 <script src="js/owl.carousel.js"></script>
 <script src="js/nuovoAnnuncio.js"></script>
-<script src="js/controlloInput.js"></script>
+<!--<script src="js/controlloInput.js"></script>-->
 
 </body>
 </html>
