--- a/profile.html
+++ b/profile.html
@@ -485,6 +485,6 @@
 <script src="js/navbar.js"></script>
 <script src="js/style.js"></script>
 <script src="js/controlloInput.js"></script>
-<script>prova('modificaProfilo')</script>
+<script>controllaSubmit('modificaProfilo')</script>
 </body>
 </html>
