--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="modal fade modal-only" id="modalNuovoAnnuncio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog edit-profile" role="document">
             <div class="modal-content">
-                <form id="nuovoAnnuncio" class="needs-validation" novalidate>
+                <form id="nuovoAnnuncio">
                     <div class="modal-header arancio">
                         <h5 class="modal-title" id="exampleModalLabel">Nuovo annuncio</h5>
                     </div>
@@ -240,8 +240,8 @@
                                 <div class="col-md-8">
                                     <div class="p-3 py-5 no-padding-top form-width">
                                         <div class="row mt-2">
-                                            <div class="col-md-6"><label><input id="titolo" type="text" class="form-control form-custom" placeholder="Titolo" value="" required></label></div>
-                                            <div class="col-md-6"><label><input id="prezzo"  type="text" class="form-control form-custom testo-grande" placeholder="Prezzo in €" value="" required></label></div>
+                                            <div class="col-md-6"><label><input id="titolo" type="text" class="form-control form-custom" placeholder="Titolo" value="" oninput="colora(id,controllaTesto(value))" required></label></div>
+                                            <div class="col-md-6"><label><input id="prezzo"  type="text" class="form-control form-custom testo-grande" placeholder="Prezzo in €" value="" oninput="colora(id,controllaPrezzo(value))" required></label></div>
                                         </div>
                                         <div class="row mt-3">
                                             <div class="col-md-6">
@@ -265,7 +265,7 @@
                                             </div>
                                         </div>
                                         <div class="row mt-3">
-                                            <div class="col-md-6"><label><input type="text" class="form-control form-custom" placeholder="Prodotto" value="" required></label></div>
+                                            <div class="col-md-6"><label><input id="prodotto" type="text" class="form-control form-custom" placeholder="Prodotto" value="" oninput="colora(id,controllaTesto(value))" required></label></div>
                                             <div class="col-md-6">
                                                 <label>
                                                     <select name="visibilita" id="visibilita" class="form-control" required>
