--- a/annuncio.html
+++ b/annuncio.html
@@ -224,138 +224,152 @@
 					<div class="modal fade modal-only" id="modalModificaAnnuncio" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 						<div class="modal-dialog edit-annuncio" role="document">
 							<div class="modal-content">
-								<div class="modal-header arancio">
-									<h5 class="modal-title" id="exampleModalLabel">Modifica annuncio</h5>
-								</div>
-								<div class="modal-body">
-									<div class="container rounded bg-white mt-5">
-										<div class="row">
-											<div class="col-md-4 border-right">
-												<div class="annuncio-img">
-													<img src="img/image_not_found.png" alt=""/>
-													<div class="file btn btn-lg x btn-primary mt-0">
-														Cambia foto
-														<input type="file" name="file" class="w-100 h-100"/>
+								<form id="modificaAnnuncio" onsubmit="return controllaForm(id)">
+									<div class="modal-header arancio">
+										<h5 class="modal-title" id="exampleModalLabel">Modifica annuncio</h5>
+									</div>
+									<div class="modal-body">
+										<div class="container rounded bg-white mt-5">
+											<div class="row">
+												<div class="col-md-4 border-right">
+													<div class="annuncio-img">
+														<img src="img/image_not_found.png" alt=""/>
+														<div class="file btn btn-lg x btn-primary mt-0">
+															Cambia foto
+															<input type="file" name="file" class="w-100 h-100"/>
+														</div>
 													</div>
 												</div>
-											</div>
-											<div class="col-md-8">
-												<div class="p-3 py-5 no-padding-top form-width">
-													<div class="row mt-2">
-														<div class="col-md-6"><label><input id="titolo" type="text" class="form-control form-custom" placeholder="Titolo" value=""></label></div>
-														<div class="col-md-6"><label><input id="prezzo"  type="text" class="form-control form-custom testo-grande" placeholder="Prezzo in €" value=""></label></div>
-													</div>
-													<div class="row mt-3">
-														<div class="col-md-6">
-															<label>
-																<select name="categoria" id="categoria" class="form-control">
-																	<option value="" disabled selected hidden>Categoria</option>
-																	<option value="elettrodomestici">Elettrodomestici</option>
-																	<option value="abbigliamento">Abbigliamento</option>
-																	<option value="fotoEVideo">Foto e video</option>
-																	<option value="hobby">Hobby</option>
-																</select>
-															</label>
+												<div class="col-md-8">
+													<div class="p-3 py-5 no-padding-top form-width">
+														<div class="row mt-2">
+															<div class="col-md-6"><label><input id="titolo" type="text" class="form-control form-custom modificaAnnuncio" placeholder="Titolo" value="" oninput="colora(id,controllaTesto(value))" required></label></div>
+															<div class="col-md-6"><label><input id="prezzo"  type="text" class="form-control form-custom testo-grande modificaAnnuncio" placeholder="Prezzo in €" value=""  oninput="colora(id,controllaPrezzo(value))" required></label></div>
 														</div>
-														<div class="col-md-6">
-															<label>
-																<select name="sottcategoria" id="sottocategoria" class="form-control">
-																	<option value="" disabled selected hidden>Sottocategoria</option>
-																</select>
-															</label>
+														<div class="row mt-3">
+															<div class="col-md-6">
+																<label>
+																	<select name="categoria" id="categoria" class="form-control modificaAnnuncio" required>
+																		<option value="" disabled selected hidden>Categoria</option>
+																		<option value="elettrodomestici">Elettrodomestici</option>
+																		<option value="abbigliamento">Abbigliamento</option>
+																		<option value="fotoEVideo">Foto e video</option>
+																		<option value="hobby">Hobby</option>
+																	</select>
+																</label>
+															</div>
+															<div class="col-md-6">
+																<label>
+																	<select name="sottcategoria" id="sottocategoria" class="form-control modificaAnnuncio" required>
+																		<option value="" disabled selected hidden>Sottocategoria</option>
+																		<option value="altro">Altro</option>
+																	</select>
+																</label>
+															</div>
 														</div>
-													</div>
-													<div class="row mt-3">
-														<div class="col-md-6"><label><input type="text" class="form-control form-custom" placeholder="Prodotto" value=""></label></div>
-														<div class="col-md-6">
-															<label>
-																<select name="visibilita" id="visibilita" class="form-control">
-																	<option value="" disabled selected hidden>Visibilità</option>
-																	<option value="pubblica">Pubblica</option>
-																	<option value="ristretta">Ristretta</option>
-																	<option value="privata">Privata</option>
-																</select>
-															</label>
+														<div class="row mt-3">
+															<div class="col-md-6"><label><input id="prodotto" type="text" class="form-control form-custom modificaAnnuncio" placeholder="Prodotto" value="" oninput="colora(id,controllaTesto(value))" required></label></div>
+															<div class="col-md-6">
+																<label>
+																	<select name="visibilita" id="visibilita" class="form-control modificaAnnuncio" onchange="visualizzaAreaVisibilita(value, 'containerAreaVisibilita')" required>
+																		<option value="" disabled selected hidden>Visibilità</option>
+																		<option value="pubblica">Pubblica</option>
+																		<option value="ristretta">Ristretta</option>
+																		<option value="privata">Privata</option>
+																	</select>
+																</label>
+															</div>
 														</div>
-													</div>
-													<div class="row mt-3">
-														<div class="col-md-6">
-															<label>
-																<select name="statoUsura" id="statoUsura" class="form-control">
-																	<option value="" disabled selected hidden>Stato usura</option>
-																	<option value="nuovo">Nuovo</option>
-																	<option value="comeNuovo">Come nuovo</option>
-																	<option value="buono">Buono</option>
-																	<option value="medio">Medio</option>
-																	<option value="usurato">Usurato</option>
-																</select>
-															</label>
+														<div class="row mt-3">
+															<div class="col-md-6">
+																<label>
+																	<select name="statoUsura" id="statoUsura" class="form-control modificaAnnuncio" onchange="visualizza(id); colora('tempoUsura', controllaTempoUsura('tempoUsura', id))" required>
+																		<option value="" disabled selected hidden>Stato usura</option>
+																		<option value="nuovo">Nuovo</option>
+																		<option value="comeNuovo">Come nuovo</option>
+																		<option value="buono">Buono</option>
+																		<option value="medio">Medio</option>
+																		<option value="usurato">Usurato</option>
+																	</select>
+																</label>
+															</div>
+															<div class="col-md-6">
+																<label id="labelTempoUsura" class="display-none">
+																	<input id="tempoUsura" type="text" class="form-control form-custom modificaAnnuncio" placeholder="Tempo usura in mesi" value="" oninput="colora(id, controllaTempoUsura(id, 'statoUsura'))">
+																</label>
+																<label id="labelScadenzaGaranzia" class="display-none">
+																	<input id="scadenzaGaranzia" type="text" class="form-control form-custom modificaAnnuncio" placeholder="Scadenza garanzia" onfocus="(this.type='date')">
+																</label>
+															</div>
 														</div>
-														<div class="col-md-6"><label><input id="tempoUsura" type="text" class="form-control form-custom" placeholder="Tempo usura in mesi" value=""></label></div>
-														<div class="col-md-6"><label><input id="scadenzaGaranzia" type="text" class="form-control form-custom" placeholder="Scadenza garanzia" onfocus="(this.type='date')"></label></div>
-													</div>
-													<br>
-													<div class="mb-2">
-														<b>Luogo di vendita</b>
-													</div>
-													<div class="row mt-3">
-														<div class="md-form md-outline container-fluid">
-															<label>
-																<select name="regione" id="luogoVenditaRegione" class="form-control">
-																	<option value="" disabled selected hidden>Regione</option>
-																	<option value="Lombardia">Lombardia</option>
-																</select>
-															</label>
-															<label>
-																<select name="provincia" id="luogoVenditaProvincia" class="form-control">
-																	<option value="" disabled selected hidden>Provincia</option>
-																	<option value="Milano">Milano</option>
-																</select>
-															</label>
-															<label>
-																<select name="comune" id="luogoVenditaComune" class="form-control">
-																	<option value="" disabled selected hidden>Comune</option>
-																	<option value="Milano">Milano</option>
-																</select>
-															</label>
+														<br>
+														<div class="mb-2">
+															<b>Luogo di vendita</b>
 														</div>
-													</div>
-													<br>
-													<div class="mb-2">
-														<b>Area di visibilità</b>
-													</div>
-													<div class="row mt-3">
-														<div class="md-form md-outline container-fluid">
-															<label>
-																<select name="regione" id="annuncio-regione" class="form-control">
-																	<option value="" disabled selected hidden>Regione</option>
-																	<option value="Lombardia">Lombardia</option>
-																</select>
-															</label>
-															<label>
-																<select name="provincia" id="annuncio-provincia" class="form-control">
-																	<option value="" disabled selected hidden>Provincia</option>
-																	<option value="Milano">Milano</option>
-																</select>
-															</label>
-															<label>
-																<select name="comune" id="annuncio-comune" class="form-control">
-																	<option value="" disabled selected hidden>Comune</option>
-																	<option value="Milano">Milano</option>
-																</select>
-															</label>
+														<div class="row mt-3">
+															<div class="md-form md-outline container-fluid">
+																<label>
+																	<select name="regione" id="luogoVenditaRegione" class="form-control modificaAnnuncio" required>
+																		<option value="" disabled selected hidden>Regione</option>
+																		<option value="Lombardia">Lombardia</option>
+																	</select>
+																</label>
+																<label>
+																	<select name="provincia" id="luogoVenditaProvincia" class="form-control modificaAnnuncio" required>
+																		<option value="" disabled selected hidden>Provincia</option>
+																		<option value="Milano">Milano</option>
+																	</select>
+																</label>
+																<label>
+																	<select name="comune" id="luogoVenditaComune" class="form-control modificaAnnuncio" required>
+																		<option value="" disabled selected hidden>Comune</option>
+																		<option value="Milano">Milano</option>
+																	</select>
+																</label>
+															</div>
+														</div>
+														<br>
+														<div id="containerAreaVisibilita">
+															<div class="mb-2">
+																<b>Area di visibilità</b>
+															</div>
+															<div class="row">
+																<div class="md-form md-outline container-fluid">
+																	<label>
+																		<select name="regione" id="visibilita-regione_0" class="form-control">
+																			<option value="" disabled selected hidden>Regione</option>
+																			<option value="Lombardia">Lombardia</option>
+																		</select>
+																	</label>
+																	<label>
+																		<select name="provincia" id="visibilita-provincia_0" class="form-control">
+																			<option value="" disabled selected hidden>Provincia</option>
+																			<option value="Milano">Milano</option>
+																		</select>
+																	</label>
+																	<label>
+																		<select name="comune" id="visibilita-comune_0" class="form-control">
+																			<option value="" disabled selected hidden>Comune</option>
+																			<option value="Milano">Milano</option>
+																		</select>
+																	</label>
+																</div>
+															</div>
+															<div id="piu" class="piu" onclick="aggiungiAreaVisibilita(id)">
+																<i class="fas fa-plus btn btn-outline-warning"></i>
+															</div>
 														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</div>
-								</div>
-								<div class="modal-footer flex-row d-flex">
-									<a class="btn btn-secondary btn-danger" data-toggle="modal" href="#modalEliminaAnnuncio">Elimina annuncio</a>
-									<button type="button" class="btn btn-secondary btn-outline-danger ml-auto" data-dismiss="modal">Annulla</button>
-									<button type="button" class="btn btn-primary btn-outline-success">Salva</button>
-								</div>
+									<div class="modal-footer flex-row d-flex">
+										<a class="btn btn-secondary btn-danger" data-toggle="modal" href="#modalEliminaAnnuncio">Elimina annuncio</a>
+										<button type="button" class="btn btn-secondary btn-outline-danger ml-auto" data-dismiss="modal">Annulla</button>
+										<button type="submit" class="btn btn-primary btn-outline-success">Salva</button>
+									</div>
+								</form>
 							</div>
 						</div>
 					</div>
@@ -366,8 +380,11 @@
 									<h3>Sei sicuro?</h3>
 								</div>
 								<div class="modal-footer">
-									<a href="#" data-dismiss="modal" class="btn btn-outline-warning">Annulla</a>
-									<a href="annuncio_eliminato.html " class="btn btn-danger">Conferma</a>
+									<form>
+										<a href="#" data-dismiss="modal" class="btn btn-outline-warning">Annulla</a>
+										<!--TODO rimandare alla pagina di "annuncio_eliminato.html" tramite funzione di backend-->
+										<button  type="submit" class="btn btn-danger">Conferma</button>
+									</form>
 								</div>
 							</div>
 						</div>
@@ -495,6 +512,7 @@
 	<script src="js/navbar.js"></script>
 	<script src="js/bottoni.js"></script>
 	<script src="js/style.js"></script>
+	<script src="js/controlloInput.js"></script>
 </body>
 
 </html>
